--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 <!--
 
@@ -25,9 +28,9 @@
     </header>
 
     <div id="carousel-imagens">
-        <img src="./assets/slide1.png" alt="Carro da Porsche">
-        <img src="./assets/slide2.png" alt="Carro da BMW">
-        <img src="./assets/slide3.png" alt="Carro da Ford">
+        <div><img src="./assets/slide1.png" alt="Carro da Porsche"></div>
+        <div><img src="./assets/slide2.png" alt="Carro da BMW"></div>
+        <div><img src="./assets/slide3.png" alt="Carro da Ford"></div>
     </div>
 
     <div class="container">
@@ -60,21 +63,7 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
-    <script src="./js/jquery.mask.min.js"></script>
-    <script src="./js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="./js/messages_pt_BR.min.js"></script>
     <script src="./js/main.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('#carousel').slick({
-                autoplay: true,
-                arrows: false
-            })
-        })
-    </script>
 </body>
 
 </html>
